--- a/index.html
+++ b/index.html
@@ -4,11 +4,47 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- font awesome cdn -->
+    <script src="https://kit.fontawesome.com/d3931e05f7.js" crossorigin="anonymous"></script>
+    <!-- manrope font from google fonts  -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Manrope:wght@200..800&display=swap" rel="stylesheet">
+    <!-- tailwind css cdn link -->
+    <script src="https://cdn.tailwindcss.com"></script>
+    <!-- to customize tailwind css code -->
+    <script>
+        tailwind.config = {
+            theme: {
+                extend: {
+                    colors: {
+                        clifford: '#da373d',
+                    }
+                }
+            }
+        }
+    </script>
+    <style>
+        manrope-font {
+            font-family: "Manrope", sans-serif;
+        }
+    </style>
     <title>Tea House</title>
 </head>
 
 <body>
+    <!-- Header styles:  -->
+    <header>
 
+    </header>
+    <!-- Main styles: -->
+    <main>
+
+    </main>
+    <!-- Footer styles: -->
+    <footer>
+
+    </footer>
 </body>
 
 </html>
