--- a/index.html
+++ b/index.html
@@ -34,11 +34,39 @@
 
 <body>
     <!-- Header styles:  -->
-    <header>
+    <header class="max-w-screen-xl mx-auto px-16 lg:px-28 flex pt-10 mb-20">
+        <!-- text content -->
+        <div class="space-y-8">
+            <h1 class="manrope-font font-bold md:text-7xl	text-5xl">It's good<br>
+                tea time at The<br>Tea House</h1>
+            <p class="text-gray-500 w-3/4">Tea and Botanical Solutions Supplier Give Optimum Satisfaction To Your Taste
+                Buds.
+            </p>
+            <button
+                class="bg-gradient-to-r from-orange-500 to-red-500 px-5 py-3 rounded-lg text-white font-bold">Explore
+                More <!--<i class="fa-solid fa-arrow-up-right-from-square"></i>--><i
+                    class="fa-solid fa-arrow-right -rotate-45"></i></button>
+        </div>
+        <!-- image content -->
+        <div class="relative">
+
+            <img src="./images/banner.png" alt="">
+
+
+            <div
+                class="absolute top-12 left-20 lg:top-80 lg:left-20 md:	 rounded-lg flex items-center gap-4  p-5 max-w-64 bg-[#fff] drop-shadow-md">
+                <i class="fa-solid fa-star text-orange-400"></i>
+                <div>
+                    <h2 class="text-3xl	font-extrabold manrope-font">5.00</h2>
+                    <p>Trust Pilot Rating</p>
+                </div>
+            </div>
+        </div>
+        <!-- card -->
 
     </header>
     <!-- Main styles: -->
-    <main>
+    <main class="max-w-screen-xl mx-auto px-16 lg:px-28">
 
     </main>
     <!-- Footer styles: -->
