featured products section done

--- a/index.html
+++ b/index.html
@@ -25,20 +25,19 @@
         }
     </script>
     <style>
-        manrope-font {
+        .manrope-font {
             font-family: "Manrope", sans-serif;
         }
     </style>
     <title>Tea House</title>
 </head>
 
-<body>
+<body class="manrope-font ">
     <!-- Header styles:  -->
     <header class="max-w-screen-xl mx-auto px-16 lg:px-28 flex pt-10 mb-20">
         <!-- text content -->
         <div class="space-y-8">
-            <h1 class="manrope-font font-bold md:text-7xl	text-5xl">It's good<br>
-                tea time at The<br>Tea House</h1>
+            <h1 class="manrope-font font-bold md:text-7xl	text-5xl">It's good<br>tea time at The<br>Tea House</h1>
             <p class="text-gray-500 w-3/4">Tea and Botanical Solutions Supplier Give Optimum Satisfaction To Your Taste
                 Buds.
             </p>
@@ -67,7 +66,45 @@
     </header>
     <!-- Main styles: -->
     <main class="max-w-screen-xl mx-auto px-16 lg:px-28">
+        <!-- featured product section -->
+        <section class="py-8 lg:py-24">
+            <!-- title -->
+            <div class="text-center mb-8">
+                <h1 class="text-3xl lg:text-5xl md:text-5xl font-extrabold	mb-2">Our Featured Products</h1>
+                <p class="text-[#777] font-medium mx-auto max-w-4xl">There are many variations of passages of Lorem
+                    Ipsum
+                    available, but
+                    the majority
+                    have suffered
+                    alteration in some form, by injected humour, or randomised words which don't look even slightly
+                    believable. </p>
+            </div>
 
+            <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-4 text-center ">
+                <!-- grid cards -->
+                <div class="bg-gradient-to-b from-gray-100 to-gray-50 rounded-xl ">
+                    <img class="mx-auto pt-4" src="./images/tea-1.png" alt="">
+                    <h4 class="text-2xl lg:text-2xl md:text-2xl font-extrabold	mb-2">Milk Tea</h4>
+                    <p class="text-[#777] font-medium mx-auto max-w-4xl">Creamer could be replaced by fresh milk</p>
+                </div>
+                <div class="bg-gradient-to-b from-gray-100 to-gray-50 rounded-xl  ">
+                    <img class="mx-auto pt-4" src="./images/tea-2.png" alt="">
+                    <h4 class="text-2xl lg:text-2xl md:text-2xl font-extrabold	mb-2">Black Tea</h4>
+                    <p class="text-[#777] font-medium mx-auto max-w-4xl">Creamer could be replaced by fresh milk</p>
+                </div>
+                <div class="bg-gradient-to-b from-gray-100 to-gray-50  rounded-xl ">
+                    <img class="mx-auto pt-4" src="./images/tea-3.png" alt="">
+                    <h4 class="text-2xl lg:text-2xl md:text-2xl font-extrabold	mb-2">Lemon Tea</h4>
+                    <p class="text-[#777] font-medium mx-auto max-w-4xl">Creamer could be replaced by fresh milk</p>
+                </div>
+                <div class="bg-gradient-to-b from-gray-100 to-gray-50  rounded-xl ">
+                    <img class="mx-auto pt-4" src="./images/tea-4.png" alt="">
+                    <h4 class="text-2xl lg:text-2xl md:text-2xl font-extrabold	mb-2">Green Tea</h4>
+                    <p class="text-[#777] font-medium mx-auto max-w-4xl">Creamer could be replaced by fresh milk</p>
+                </div>
+            </div>
+
+        </section>
     </main>
     <!-- Footer styles: -->
     <footer>
