--- a/index.html
+++ b/index.html
@@ -105,6 +105,39 @@
             </div>
 
         </section>
+        <!-- great tea, freshly presented section -->
+        <section class="mb-20 flex gap-14 mx-auto">
+            <div class="grid grid-cols-1 lg:grid-cols-2"></div>
+            <div class="grid grid-cols-2 grid-row-3 gap-4 lg:w-5/6">
+                <div class="w-56 h-32 rounded-xl bg-gradient-to-r from-red-100 to bg-orange-50"></div>
+                <div class="bg-orange-100 rounded-xl row-span-2"><img class=" mx-auto" src="images/fresh-1.png" alt="">
+                </div>
+                <div class="bg-stone-100 rounded-xl row-span-2"><img class=" mx-auto" src="images/fresh-2.png" alt="">
+                </div>
+                <div class="w-56 h-32 rounded-xl bg-gradient-to-r from-gray-300 to bg-white-50"></div>
+
+
+            </div>
+
+            <div>
+                <h1 class="text-3xl lg:text-5xl md:text-5xl font-extrabold	mb-2">Great Tea, Freshly Presented</h1>
+                <p class="text-[#777] font-medium mx-auto max-w-4xl">The meaning of gong cha is chanese is to
+                    provide the best tea to emperor from all possessions .
+                    It represents the highest quality and self expectation. Establishing in 2006, Gong cha had been
+                    deeply appreciated by its custoers because of good words of mouth and unique customized service
+                    orginated from Taiwan.</p>
+                <br>
+                <h1 class="text-xl font-extrabold">Unique Taste</h1>
+                <p class="text-[#777] font-medium mx-auto max-w-4xl">A Unique and different style from other teapots
+                    gives a luxurious and minimalist
+                    impression</p>
+                <br>
+                <h1 class="text-xl font-extrabold">Premium Quality</h1>
+                <p class="text-[#777] font-medium mx-auto max-w-4xl">Premium Quality that makes tea more elegant and
+                    more durable when you use it.</p>
+            </div>
+            </div>
+        </section>
     </main>
     <!-- Footer styles: -->
     <footer>
