--- a/index.html
+++ b/index.html
@@ -138,6 +138,28 @@
             </div>
             </div>
         </section>
+        <!-- Meet our clients section -->
+        <section
+            class="mb-24  bg-gradient-to-r from-orange-500 to-red-500 rounded-xl grid grid-cols-1 lg:grid-cols-2 text-white px-7 md:px-16 lg:px-16">
+            <!-- text section -->
+            <div>
+                <h1 class="text-[#fff] text-3xl lg:text-5xl md:text-5xl font-extrabold	mb-2">Meet Our Super Clients
+                </h1>
+                <p class="text-[#fff] font-medium mx-auto max-w-4xl">There are many variations of passages of Lorem
+                    Ipsum available, but the majority have suffered alteration in some form, by injected humour, or
+                    randomised words which don't look even slightly believable. </p>
+                <div class=" rounded-md bg-white mt-4 mb-4 px-3 py-2 max-w-fit">
+                    <button
+                        class="font-bold bg-gradient-to-r from-orange-500 to-red-500 text-transparent  bg-clip-text ">Show
+                        All</button>
+                </div>
+
+            </div>
+            <!-- card section  -->
+            <div>
+
+            </div>
+        </section>
     </main>
     <!-- Footer styles: -->
     <footer>
