changed some icon

--- a/index.html
+++ b/index.html
@@ -342,14 +342,16 @@
               class="text-gray-500 outline-none bg-gradient-to-r from-red-100 to-orange-100 border-b-2 border-stone-600"
               placeholder=" Email address" />
             <button
-              class="w-7 rounded-full bg-gradient-to-r from-orange-500 to-red-600">
-              <i class="text-gray-600 fa-solid fa-arrow-right"></i>
+              type="button"
+              onclick="javascript:window.location.href='https://github.com/SayeedSAMI'">
+              <i
+                class="w-7 h-7 inline-flex text-white rounded-full bg-gradient-to-r from-orange-500 to-red-600 fa-solid fa-chevron-right justify-center items-center"></i>
             </button>
           </div>
           <div class="flex gap-3">
-            <i class="text-gray-600 fa-brands fa-facebook"></i
-            ><i class="text-gray-600 fa-brands fa-twitter"></i
-            ><i class="text-gray-600 fa-brands fa-instagram"></i>
+            <i class="text-gray-600 fa-brands fa-facebook"></i>
+            <i class="text-gray-600 fa-brands fa-twitter"></i>
+            <i class="text-gray-600 fa-brands fa-instagram"></i>
           </div>
         </div>
       </section>
